30-Jan-2012 Removed redundant Thread from Opus.Core.BuildAgent, since the threadpool is used.

29-Jan-2012 Opus.Core.File.SetRelativePath now takes a module's proxy path into account.

29-Jan-2012 While generating the dependent list of packages for compilation, ensure that only those valid for the current platform are considered.

29-Jan-2012 Adding SymLink module types to the FileUtilities package. This supports soft links to files and directories. Native build support is provided. A test package 'SymLinks-dev' is provided to test the support.

28-Jan-2012 Opus.Core.DirectoryCollection implementation simplified. Consistency with FileCollections allow using Include and Exclude methods. Opus.Core.PackageAndDirectoryPath is now redundant and has been removed.

28-Jan-2012 Handle the case of cloning a Opus.Core.ReferenceTypeOption that has null as it's value.

28-Jan-2012 Project Guids in .vcprojs/.vcxprojs/.csprojs are now deterministic after regenerating the solution. These are based upon the paths of the project files.

28-Jan-2012 Optimization to writing .vcprojs, while refactoring paths for OutDir and IntDir macros.

28-Jan-2012 Optimization to writing .vcprojs. Only add a trailing directory separator to the OutDir and IntDir variables once.

28-Jan-2012 Ensure that .vcprojs generated have the intermediate directory set, if they have moc entries.

26-Jan-2012 Optimization to Opus.Core.ModuleUtilities.GetModule(), that speeds up option collection generation.

25-Jan-2012 Adding Opus.Core.ModuleGroup attribute to apply to classes (modules). This accepts a string as the single argument. For some versions of VisualStudio, this is used to generate Solution Folders, and places those marked modules with in them.

25-Jan-2012 Opus.Core.DependencyNodeCollection now has an overridden ToString() method. This displays the rank and how many nodes are contained within.
